# GameEngine

./: .gitattributes  CMakeLists.txt  README.md
include/: Shader.h
include/App/: AppWindow.h  Game.h
include/Engine/: DeviceContext.h  GraphicsEngine.h  SwapChain.h  Window.h
include/graphics/: Renderer2D.h  Shader.h  SubTexture2D.h  Texture2D.h
libs/glad/include/GLAD/: glad.h
libs/glad/src/: glad.c
shaders/: triangle.frag  triangle.vert
src/: main.cpp
src/App/: AppWindow.cpp  Game.cpp  main.cpp
src/Engine/: DeviceContext.cpp  GraphicsEngine.cpp  SwapChain.cpp  Window.cpp
src/graphics/: Renderer2D.cpp  Shader.cpp  SubTexture2D.cpp  Texture2D.cpp
